--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # For more see: http://jekyllrb.com/docs/permalinks/
 permalink: /:title
 # https://help.github.com/articles/migrating-your-pages-site-from-maruku
-markdown: redcarpet
+markdown: kramdown
 
 highlighter: pygments
 paginate: 20 # pagination based on number of posts
@@ -15,22 +15,15 @@ categories_path : categories.html
 tags_path : tags.html
 
 #BASE_PATH : http://blog.ankanbiswas.in/uno-dbyll
-BASE_PATH : http://goileo.top
+BASE_PATH : http://lkk.trade
 
 description : 深沉的意志，恢宏的想象和炽热的情感
-title : Goileo Lee
+title : LKK
 logo : /assets/images/avatar.jpg
 #cover : /assets/images/background-cover.jpg
 
 
 author:
-  name: Goileo Lee
-  maxim: Stay hungry,Stay foolish
-  role: Jekyll Theme
-  email: goileolee@gmail.com
-  github: goileolee
-  twitter: goileolee
-  facebook: goileolee
-  googleplus: +goileolee
-  bio: "Hi, 我是goileolee"
+  name: LKK
+  bio: "Hi, 我是LKK"
   uno-dbyll: /assets/images/avatar.jpg
